Fix show side bar button visibility

--- a/src/index.css
+++ b/src/index.css
@@ -245,7 +245,6 @@ header {
 }
 
 nav {
-  font-size: 14px;
   line-height: 19px;
   margin-top: 20px;
 }
